refactor: KoRundeTeamPaarungen – vereinfacht, Testabdeckung deutlich erweitert
Refactoring:
- TauschTeams-Klasse durch Java record ersetzt
- hatgetauscht-Flag entfernt (direktes if/else stattdessen)
- sucheGegnerFuer: manueller Loop durch Stream ersetzt
- doppelteGespieltePaarungen: List<String> statt String-Konkatenation
- Bug behoben: doppelteGespieltePaarungen wurde nicht zurückgesetzt
- get(0)/get(size-1) durch getFirst()/getLast() ersetzt
- Javadoc ergänzt

Tests: 5 → 19 Testfälle
- Normalfall 2/4/6/8 Teams, kein-Doppel-Flag
- Direktes Ausweichen bei bereits gespieltem Gegner
- Tausch-Szenarien (4 und 6 Teams)
- Doppel-Paarung: Flag, String-Format, Reset nach zweitem Aufruf
- sucheGegnerFuer und kanntauschenMit direkt getestet